# xmunge

./: .gitignore  README.md  clean.py  munge.py  pyproject.toml
test/: diff.py
utils/: __init__.py  globals.py  logs.py  mungers.py  tools.py  validators.py
xm/mungers/: __init__.py  addme.py  base.py  common.py  load.py  shell.py  side.py  sound.py  world.py
xm/utils/: args.py  dirs.py  globals.py  tools.py
