[tool.poetry]
name = "xmunge"
version = "0.1.0"
description = ""
authors = ["Jeremy Rempel <jeremy.rempel@usask.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
